Improved setup view flow with profile pic upload, group choice decisions

--- a/SideBySide/.gitignore
+++ b/SideBySide/.gitignore
@@ -1,1 +1,19 @@
-GoogleService-Info.plist
+# Firebase config
+**/GoogleService-Info.plist
+
+# Xcode user-specific data
+**/xcuserdata/
+**/xcuserdata/**
+
+# macOS metadata
+.DS_Store
+
+# Xcode build artifacts
+DerivedData/
+build/
+
+# SwiftPM
+.swiftpm/
+
+# Xcode workspace settings
+*.xcuserstate
